[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mloader"
version = "0.1.0"
description = "Smart KV file loader for Kivy/KivyMD widgets - auto-detects and loads matching .kv files"
readme = "README.md"
authors = [
    {name = "Nathan R.K", email = "nathankuipa44@gmail.com"},
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: Kivy",
]
keywords = ["kivy", "kivymd", "kvlang", "loader", "widget"]
requires-python = ">=3.6"
dependencies = [
    "kivy>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/nathankuipa25/Mloader/"
Repository = "https://github.com/nathankuipa25/Mloader.git"
BugTracker = "https://github.com/nathankuipa25/Mloader/issues"

[project.optional-dependencies]
dev = ["pytest", "twine", "build"]

[tool.setuptools.packages.find]
include = ["mloader*"]

[tool.setuptools.dynamic]
version = {attr = "mloader.__version__"}